--- a/src/main/java/Vistas/Login.form
+++ b/src/main/java/Vistas/Login.form
@@ -126,7 +126,7 @@
               <Font name="Segoe UI Black" size="12" style="2"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor de Mano"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
         </Component>
@@ -157,7 +157,7 @@
               <Font name="Segoe UI Black" size="12" style="2"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\SENA\Downloads\entrada.jpg"/>
+              <Image iconType="2" name="C:\Gonzalo Araujo\proyecto-final\src\main\java\IMG\entrada.png"/>
             </Property>
           </Properties>
           <AuxValues>
@@ -170,11 +170,6 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\SENA\Downloads\icono admin.jpg2.jpg"/>
-            </Property>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
