--- a/src/main/java/Vistas/Validar.form
+++ b/src/main/java/Vistas/Validar.form
@@ -148,7 +148,7 @@
               <Font name="Segoe UI Black" size="14" style="2"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/IMG/entrada.jpg"/>
+              <Image iconType="2" name="C:\Gonzalo Araujo\proyecto-final\src\main\java\IMG\entrada.png"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
@@ -172,7 +172,7 @@
               <Font name="Segoe UI Black" size="14" style="2"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/IMG/salida student.jpg"/>
+              <Image iconType="2" name="C:\Gonzalo Araujo\proyecto-final\src\main\java\IMG\salida.png"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
@@ -387,7 +387,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/IMG/Regresar.png"/>
+              <Image iconType="2" name="C:\Gonzalo Araujo\proyecto-final\src\main\java\IMG\Regresar.png"/>
             </Property>
           </Properties>
           <AuxValues>
